--- a/Programming_12.ipynb
+++ b/Programming_12.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "ecba9ea6",
    "metadata": {},
    "outputs": [
@@ -210,47 +210,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of key-value pairs: 3\n",
+      "Enter the number of key-value pairs: 2\n",
       "Enter key 1: ID\n",
-      "Enter value for 'ID': 101\n",
-      "Enter key 2: Postion\n",
-      "Enter value for 'Postion': Software Intern\n",
-      "Enter key 3: Name\n",
-      "Enter value for 'Name': Aniruddha\n",
-      "Flat Dictionary: {'ID': '101', 'Postion': 'Software Intern', 'Name': 'Aniruddha'}\n"
+      "Enter value for 'ID' as a list (comma-separated): 101,102\n",
+      "Enter key 2: NAME\n",
+      "Enter value for 'NAME' as a list (comma-separated): Ajay,Vijay\n",
+      "Original Dictionary: {'ID': ['101', '102'], 'NAME': ['Ajay', 'Vijay']}\n",
+      "Flattened Dictionary: {'101': 'Ajay', '102': 'Vijay'}\n"
      ]
     }
    ],
    "source": [
     "# Question 4- Program to convert a list of key-value pairs to a flat dictionary\n",
-    "def list_to_flat_dictionary(key_value_list):\n",
-    "    flat_dict = {}\n",
-    "    for i in range(0, len(key_value_list), 2):\n",
-    "        if i + 1 < len(key_value_list):\n",
-    "            key = key_value_list[i]\n",
-    "            value = key_value_list[i + 1]\n",
-    "            flat_dict[key] = value\n",
-    "    return flat_dict\n",
     "\n",
-    "# Input the number of key-value pairs from the user\n",
+    "# Input the key-value pairs from the user\n",
+    "dic = {}\n",
     "try:\n",
-    "    num_pairs = int(input(\"Enter the number of key-value pairs: \"))\n",
+    "    num_items = int(input(\"Enter the number of key-value pairs: \"))\n",
     "except ValueError:\n",
     "    print(\"Please enter a valid number.\")\n",
     "    exit(1)\n",
     "\n",
-    "# Input the list of key-value pairs one by one\n",
-    "key_value_list = []\n",
-    "for i in range(num_pairs):\n",
+    "for i in range(num_items):\n",
     "    key = input(f\"Enter key {i + 1}: \")\n",
-    "    value = input(f\"Enter value for '{key}': \")\n",
-    "    key_value_list.extend([key, value])\n",
+    "    value_input = input(f\"Enter value for '{key}' as a list (comma-separated): \")\n",
+    "    value_list = [item.strip() for item in value_input.split(',')]\n",
+    "    dic[key] = value_list\n",
     "\n",
-    "# Call the function to convert the list to a flat dictionary\n",
-    "flat_dictionary = list_to_flat_dictionary(key_value_list)\n",
+    "# Display the original dictionary\n",
+    "print(\"Original Dictionary:\", dic)\n",
     "\n",
+    "# Convert to a flat dictionary using dict() and zip()\n",
+    "keys = list(dic.keys())  # Get a list of keys\n",
+    "values = list(dic.values())  # Get a list of values\n",
     "\n",
-    "print(\"Flat Dictionary:\", flat_dictionary)\n"
+    "# Check if all lists have the same length\n",
+    "if all(len(value) == len(values[0]) for value in values):\n",
+    "    f_dic = dict(zip(*values))  # Use zip() to create the flat dictionary\n",
+    "else:\n",
+    "    print(\"Error: The lists of values have different lengths, cannot create a flat dictionary.\")\n",
+    "\n",
+    "# Display the flattened dictionary if created successfully\n",
+    "if f_dic:\n",
+    "    print(\"Flattened Dictionary:\", f_dic)\n"
    ]
   },
   {
@@ -275,7 +277,7 @@
     }
    ],
    "source": [
-    "#Question 5- Program to insert a key-value pair at the beginning of an OrderedDict\n",
+    "    #Question 5- Program to insert a key-value pair at the beginning of an OrderedDict\n",
     "\n",
     "from collections import OrderedDict\n",
     "def insert_at_beginning(original_dict, item):\n",
@@ -434,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c0eb5c",
+   "id": "4c343d1d",
    "metadata": {},
    "outputs": [],
    "source": []
